edition = "2023";  // successor to proto2 and proto3

package storage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message DeclarativeConfigHealth {
  enum Status {
    UNHEALTHY = 0;
    HEALTHY = 1;
  }

  enum ResourceType {
    CONFIG_MAP = 0;
    ACCESS_SCOPE = 1;
    PERMISSION_SET = 2;
    ROLE = 3;
    AUTH_PROVIDER = 4;
    GROUP = 5;
    NOTIFIER = 6;
    AUTH_MACHINE_TO_MACHINE_CONFIG = 7;
  }

  string id = 1; // @gotags: sql:"pk,type(uuid)"
  string name = 2;
  Status status = 4;
  string error_message = 5;
  string resource_name = 6;
  ResourceType resource_type = 7;

  // Timestamp when the current status was set.
  google.protobuf.Timestamp last_timestamp = 8 [lazy = true];
}
